update todo api docs
